--- a/gb/23/10/24/n14101805.md
+++ b/gb/23/10/24/n14101805.md
@@ -126,7 +126,7 @@
 <p>分析人员在“盲态”下，对两组水样本形成的冰晶进行识别和拍照，并由100名独立评审人员对所得影像的美学吸引力进行盲态评估。结果表明，经过积极意念处理过的水结晶，在美学吸引力方面，比对照组水结晶得分更高（P=.001）。?1?</p>
 <figure id="attachment_14102152" aria-describedby="caption-attachment-14102152" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14102152-39e37abaad7677455fd4260c780d74da.jpg"><img decoding="async" class="size-large wp-image-14102152" src="https://i.epochtimes.com/assets/uploads/2023/10/id14102152-39e37abaad7677455fd4260c780d74da-600x483.jpg" alt="" width="600" b="483" /></a><figcaption id="caption-attachment-14102152" class="wp-caption-text">图6-14 由100名独立评审人员对两组水结晶照片的美学吸引力进行盲态评估。结果表明，经过积极意念处理的24份水结晶，比16份对照样本的水结晶的美学得分更高。（《探索》截图）</figcaption></figure>
 <p>拉丁博士等2008年发表在《科学探索期刊》（Journal of Scienti?c Exploration）上的<ahref="https://www.researchgate.net/publication/255669110_Effects_of_Distant_Intention_on_Water_Crystal_Formation_A_Triple-Blind_Replication">三盲实验</a>的论文标题为“远方意图对水晶体形成的影响：三盲重复”（Effects of Distant Intention on Water Crystal Formation: A Triple-Blind Replication）。实验是这样做的，三天内，奥地利和德国的1,900人将注意力集中在加州电磁屏蔽室内的水样本上。提供正面意念信息的人不知道位于目标水附近有一个充当“邻近对照”的水样本。另外，位于屏蔽室外还有一个“远端对照”水样本。技术人员对不同处理条件下的水样本形成的结晶进行拍照，每张图像均由超过2,500名独立评审进行美学评估，并对所得数据进行分析。所有参与者都不清楚照片的分组情况。结果表明，提供正面意念信息处理的水结晶，晶体影像被评价为比邻近对照的水结晶晶体更美观（p=0.03）。这项结果再一次验证了先前江本胜的研究和双盲测试的结果。?1?</p>
-<p>双盲和三盲实验，是科学可以做的最严谨的认证了。尽管如此，在网络上还是可以看到很多人反对水结晶实验的发现，维基百科甚至把其称之为“伪科学”。</p>
+<p>双盲和三盲实验，是科学可以做的最严谨的认证了。尽管如此，在网络上还是可以看到很多人反对水结晶实验的发现。</p>
 <p>因为水结晶实验的结论触动了一些人内心深处的进化论和机械唯物的观念。按照达尔文进化假说，水是无机物，连生命都算不上，怎么会具备思维能力，甚至能感知环境状态？所以一些观念固执的人，不能以开放的心胸来接纳，甚至抵触水结晶实验的结论。而科学的真正精神是以尊重事实为根本，而不能以维护固有观念为教条。</p>
 <p>目前地球环境中的水资源受到严重污染，直接给人类的生存、健康和生态系统带来重大挑战。人类要想继续生存下去，必须有效解决水污染问题。水是一面镜子，反映出周围环境好坏，包括人心善恶。如果要从根源上解决水污染问题，恐怕要重新更新我们对水的认识。</p>
 <h3>5.3 量子物理学证明人的精神影响客观世界</h3>
@@ -283,7 +283,7 @@
 <p>例如2002年以色列科学家在《生物电磁学》上发表的研究结果指出，人脑松果体中存在长度小于20微米的碳酸钙<ahref="https://pubmed.ncbi.nlm.nih.gov/12224052/#:~:text=The%20calcite%20microcrystals%20are%20probably,is%20the%20case%20with%20otoconia">晶体</a>，这些微晶具有复杂的纹理结构，对频率和压力的改变十分敏感，可能导致压电效应。压电效应是物质在受到力学刺激时产生电荷的现象。压电电荷也可表现为发光，和光现象有关。???</p>
 <p>研究发现，多种动物的松果体中含有<ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3398033/">感光细胞</a>???，具有<ahref="https://doi.org/10.1016/S0301-0082(98)00078-1">感光功能</a>???，在行为和生理的昼夜节律调节中发挥重要作用。</p>
 <p>松果体随着胎儿发育的越来越大，反而变小，最后成为大小脑间的豌豆大的结构，对应着两眉中间的前额部分。松果体具有多种功能，与人的视觉有关。</p>
-<p>有意思的是，1980年6月，陈守良教授在北京大学附属小学<ahref="https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1">调查</a>了739名男生和737名女生，其中色盲男孩48人、色盲女孩5人。色盲儿童可被诱发出特殊感应功能。色盲儿童眼睛能够正确识别的颜色，通过特殊能力识别准确率为92%；而他们用眼睛无法正确区分的颜色，通过特殊能力识别准确率只有35%。这一结果表明，特殊认字功能，可能与视觉中枢有关。???</p>
+<p>有意思的是，1980年6月，陈守良教授在北京大学附属小学<ahref="https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1">调查</a>了739名男生和737名女生，其中色盲男孩48人、色盲女孩5人。在5名患有部分色盲的儿童中诱发出特殊感应功能。测试发现，色盲儿童眼睛能够正确识别的颜色，通过特殊能力识别准确率为92%；而他们用眼睛无法正确区分的颜色，通过特殊能力识别准确率只有35%。这一结果表明，特殊认字功能，可能与视觉中枢有关。???</p>
 <p>另外，特异功能者在行使功能之前一般需要练功，增强功力。如果练功跟不上，功能不容易发挥出来。这里就有一个能量的运用问题。</p>
 <p>??宋孔智的研究发现，在特异功能者进入特异功能状态的时候，<ahref="https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link">脑电图</a>发生了明显而复杂的变化，当然，对于脑的复杂功能来说，脑电图所能看出的变化太简单，远远不能揭开其真实的本质，但是脑电图的变化提示人们，特异功能是一个生理过程，并不是空穴来风。???</p>
 <p>1981年5月，第二届人体特异功能科学讨论会会上，钱学森曾发表一篇长达万字的<ahref="https://drive.google.com/drive/u/0/folders/1fcb4XXHEs2e0KJiqQw341pamcWrvsGEA">《开展人体科学的基础研究》</a>论文，从巨系统理论、量子力学理论、基本核子理论，也对人体特异功能的现代科学机理进行了探讨。???</p>
@@ -356,12 +356,12 @@
 <p>605. Britannica, The Editors of Encyclopaedia. &#8220;matter&#8221;. Encyclopedia Britannica, 2 Oct. 2023, https://www.britannica.com/science/matter. Accessed 8 October 2023.</p>
 <p>606. Matté, James Allen. Forensic Psychophysiology Using the Polygraph: Scientific Truth Verification, p. 39. J.A.M. Publications, 1996. ISBN 9780965579407. <ahref="https://books.google.ch/books?id=4yThE6vChBAC&amp;pg=PA39&amp;redir_esc=y#v=onepage&amp;q&amp;f=false">https://books.google.ch/books?id=4yThE6vChBAC&amp;pg=PA39&amp;redir_esc=y#v=onepage&amp;q&amp;f=false</a> &#8220;Cleve Backster, born Grover Cleveland Backster, Jr., on 27 February 1924 at Lafayette, New Jersey, received an appointment on 12 April 1948 as Plans Officer at the newly formed Central Intelligence Agency (CIA) whose near total operation was headquartered at 2430 E. Street, N. W. in Washington D. C&#8230;.&#8221;</p>
 <p>607. Cleve Backster. Evidence of a Primary Perception In Plant Life. International Journal of Parapsychology. vol. 10, no. 4, 1968; Volume 10 (4):328-411.<br />
+<ahref="https://www.researchgate.net/publication/333566924_Evidence_of_a_Primary_Perception_In_Plant_Life">https://www.researchgate.net/publication/333566924_Evidence_of_a_Primary_Perception_In_Plant_Life</a></p>
 <p>608. 《植物，也有情绪──探索植物、蛋、细菌以及人体细胞的超感能力》作者：克里夫?巴克斯特。译者： 谭平。出版社：博大。页数: 192。尺寸: 20x19cm。装订: 平装。出版日期: 2006年4月。语言：繁体中文。<br />
 <ahref="https://www.books.com.tw/products/0010327467">https://www.books.com.tw/products/0010327467</a></p>
 <p>609. 《植物，也有情绪──探索植物、蛋、细菌以及人体细胞的超感能力》作者：克里夫?巴克斯特。译者： 谭平。出版社：博大。页数: 192。尺寸: 20x19cm。装订: 平装。出版日期: 2006年4月。语言：繁体中文。<br />
 <ahref="https://www.books.com.tw/products/0010327467">https://www.books.com.tw/products/0010327467</a>; <ahref="https://www.youtube.com/watch?v=wzhC2hJ2jUk">20080603_ Primary Perception-原始感应（植物也有情绪）</a></p>
 <p>610. Cleve Backster. Evidence of a Primary Perception In Plant Life. International Journal of Parapsychology. vol. 10, no. 4, 1968; Volume 10 (4):328-411.<br />
-<ahref="https://www.researchgate.net/publication/333566924_Evidence_of_a_Primary_Perception_In_Plant_Life">https://www.researchgate.net/publication/333566924_Evidence_of_a_Primary_Perception_In_Plant_Life</a></p>
 <p>611. Cleve Backster. Stephen G. White. Bio-communications Capability: Human Donors and In Vitro Leukocytes. The Backster Research Foundation, Inc. 1985; International Journal of Biosocial Research, Volume 7(2): 132-146.<br />
 <ahref="https://www.rebprotocol.net/clevebaxter/Biocommunications%20Capability-%20Human%20Donors%20and%20In%20Vitro%20Leukocytes%2016pp.pdf">https://www.rebprotocol.net/clevebaxter/Biocommunications%20Capability-%20Human%20Donors%20and%20In%20Vitro%20Leukocytes%2016pp.pdf</a></p>
 <p>612. Cleve Backster. Primary Perception: Biocommunication with Plants, Living Foods, and Human Cells. Format Paperback. Published September 1, 2003 by White Rose Millennium Pr. ISBN:9780966435436 (ISBN10: 0966435435) Language: English.<br />
@@ -396,7 +396,9 @@
 <p>627. 陈守良。人体特异性功能的调查报告（2011-04-18 15:53:58）<br />
 <ahref="https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1">https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1 </a></p>
 <p>628. 由手指识字实验辨识特殊关键字所观察到的异象。李嗣涔，国立台湾大学电机工程学系，台北，台湾；陈建德，国立台湾大学物理学系，台北，台湾；唐大崙，国立台湾大学心理学系，台北，台湾。<br />
+<ahref="https://drive.google.com/file/d/1dYeIqMhm-lidQi5NA0xjct4c3dddAg-2/view?usp=drive_link">https://drive.google.com/file/d/1dYeIqMhm-lidQi5NA0xjct4c3dddAg-2/view?usp=drive_link</a></p>
 <p>629. 父母是孩子选择的：育儿从孩子出生前开始。池川明着。卢佳女译。中国友谊出版公司 2010年10月。ISBN978-7-5057-2811-0。<br />
+<ahref="https://zlibrary-africa.se/s/">https://zlibrary-africa.se/s/</a></p>
 <p>630. 【真实历史影像】钱学森谈特异功能，507所研究档案，中国人体科学探索。时间12分55秒：<br />
 <ahref="https://www.ganjingworld.com/s/0zXqJwwez4?t=776">https://www.ganjingworld.com/s/0zXqJwwez4?t=776</a></p>
 <p>631. 【真实历史影像】钱学森谈特异功能，507所研究档案，中国人体科学探索。时间4分10秒：<br />
@@ -405,7 +407,6 @@
 <ahref="https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link">https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link</a>; <ahref="https://www.youtube.com/watch?v=oAkuE_zhetY">【独家访谈507所研究员宋孔智】神秘的超自然现象研究档案，揭秘749局、507所！那些不为人知的惊人实验！特异功能的科学研究！</a></p>
 <p>633. 宋孔智。张宝胜特异功能的启示。2008年7月。<br />
 <p>634. 宋孔智。张宝胜特异功能的启示。2008年7月。<br />
-<ahref="https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link">https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link</a>; <ahref="https://www.youtube.com/watch?v=oAkuE_zhetY">【独家访谈507所研究员宋孔智】神秘的超自然现象研究档案，揭秘749局、507所！那些不为人知的惊人实验！特异功能的科学研究！</a></p>
 <p>635. LETTER TO THE EDITOR NATURE. Document Type: CREST; Collection: STARGATE; Document Number (FOIA) /ESDN (CREST): CIA-RDP96-00792R000200650001-4; Document Page Count: 33; Document Creation Date: November 4, 2016; Document Release Date: October 28, 1998; Publication Date: July 23, 1991; Content Type: LETTER</p>
 <p>636. 张宝胜特异功能表演纪录片（1994年）。新中国频道。<br />
 <ahref="https://www.youtube.com/watch?v=Hnsi7A3v8Po">https://www.youtube.com/watch?v=Hnsi7A3v8Po </a></p>
@@ -436,7 +437,6 @@
 <p>650. 沈今川，孙储琳。孙储琳心灵（深层意识）聚能现象的验证与思考。《中国人体科学》第6卷 第1 期，页10-15。<br />
 <ahref="https://drive.google.com/file/d/12oXm6n_9ecq_0PKiIGp9YqNsez5HafaX/view?usp=share_link">https://drive.google.com/file/d/12oXm6n_9ecq_0PKiIGp9YqNsez5HafaX/view?usp=share_link</a></p>
 <p>651. 由手指识字实验辨识特殊关键字所观察到的异象。李嗣涔，国立台湾大学电机工程学系，台北，台湾；陈建德，国立台湾大学物理学系，台北，台湾；唐大崙，国立台湾大学心理学系，台北，台湾。<br />
-<ahref="https://drive.google.com/file/d/1dYeIqMhm-lidQi5NA0xjct4c3dddAg-2/view?usp=drive_link">https://drive.google.com/file/d/1dYeIqMhm-lidQi5NA0xjct4c3dddAg-2/view?usp=drive_link</a></p>
 <p>652. 【真实历史影像】钱学森谈特异功能，507所研究档案，中国人体科学探索。时间12分03秒：<br />
 <ahref="https://www.ganjingworld.com/s/0zXqJwwez4?t=722">https://www.ganjingworld.com/s/0zXqJwwez4?t=722</a></p>
 <p>653. Olga Savka. 30.05.2005 13:13. Scientists discover third eye – the center of telepathy and clairvoyance. The fact of the third eye&#8217;s existence can be found in modern embryology.<br />
@@ -448,15 +448,14 @@
 <p>656. Falcón, J. (1999). Cellular circadian clocks in the pineal. Progress in Neurobiology, 58(2), 121-162.<br />
 <ahref="https://doi.org/10.1016/S0301-0082(98)00078-1">https://doi.org/10.1016/S0301-0082(98)00078-1</a>; <ahref="https://sci-hub.st/https://doi.org/10.1016/S0301-0082(98)00078-1">https://sci-hub.st/https://doi.org/10.1016/S0301-0082(98)00078-1</a></p>
 <p>657. 陈守良。人体特异性功能的调查报告 (2011-04-18 15:53:58)<br />
+<ahref="https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1">https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1</a></p>
 <p>658. 宋孔智。张宝胜特异功能的启示。2008年7月。<br />
 <ahref="https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link">https://drive.google.com/file/d/1n9ffaU-mjVOUpRWqOTg5l8DQMKYqTrkB/view?usp=drive_link</a></p>
 <p>659. 钱学森。开展人体科学的基础研究。<br />
 <ahref="https://drive.google.com/drive/folders/1fcb4XXHEs2e0KJiqQw341pamcWrvsGEA?usp=share_link">https://drive.google.com/drive/folders/1fcb4XXHEs2e0KJiqQw341pamcWrvsGEA?usp=share_link</a></p>
 <p>660. 陈守良。人体特异性功能的调查报告 (2011-04-18 15:53:58)<br />
-<ahref="https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1">https://blog.sina.com.cn/s/blog_62890f110100rdjw.md#1</a></p>
 <p>661. Experimental Research in the Application of Qigong (Deep Breathing) Exercises to Restore Intelligence for Mentally Handicapped Children. Yunnan University Physics Department，Office of Somatic Science Research. Approved For Release 2000/08/10: CIA-RDP96-00792R000300050001-9.</p>
 <p>662. 父母是孩子选择的：育儿从孩子出生前开始。池川明着。卢佳女译。中国友谊出版公司 2010年10月。ISBN978-7-5057-2811-0。<br />
-<ahref="https://zlibrary-africa.se/s/">https://zlibrary-africa.se/s/</a></p>
 <p>663. 中国人体科学学会。人体科学──当代科学突破的重要前线。中国人体科学创刊号。1990年7月。<br />
 <ahref="https://drive.google.com/file/d/1wxTBU8rrQ1CsrPeOz0_LSyPVMewuqbR_/view?usp=share_link">https://drive.google.com/file/d/1wxTBU8rrQ1CsrPeOz0_LSyPVMewuqbR_/view?usp=share_link</a></p>
 <p>664. 全网最全人体“特异功能”发展史！钱学森晚年最大的心愿！透视、意念致动、心灵感应研究成果公布。<br />
@@ -479,44 +478,39 @@
 <p>673. 李洪志先生 《转法轮》第一讲<br />
 <ahref="https://big5.falundafa.org/chibig5/zfl_1.md#1">https://big5.falundafa.org/chibig5/zfl_1.md#1</a></p>
 <p>674. 李洪志先生 《转法轮》第三讲<br />
-<ahref="https://big5.falundafa.org/chibig5/zfl.md#1">https://big5.falundafa.org/chibig5/zfl.md#1</a></p>
 <p>675. 了解法轮功：见证奇迹 解开生命奥秘<br />
 <ahref="https://big5.minghui.org/mh/articles/2020/3/7/%E4%BA%86%E8%A7%A3%E6%B3%95%E8%BC%AA%E5%8A%9F-%E8%A6%8B%E8%AD%89%E5%A5%87%E8%B9%9F-%E8%A7%A3%E9%96%8B%E7%94%9F%E5%91%BD%E5%A5%A7%E7%A7%98-402077.md#1">https://big5.minghui.org/mh/articles/2020/3/7/%E4%BA%86%E8%A7%A3%E6%B3%95%E8%BC%AA%E5%8A%9F-%E8%A6%8B%E8%AD%89%E5%A5%87%E8%B9%9F-%E8%A7%A3%E9%96%8B%E7%94%9F%E5%91%BD%E5%A5%A7%E7%A7%98-402077.md#1</a></p>
 <p>《透视“进化论”》写作组</p>
 <p><em>点阅【<ahref="https://github.com/1992513/djy/blob/master/gb/tag/透视进化论.md#1">透视“进化论”</a>】系列文章。</em><br />
-<em>【<ahref="http://www.epochtimes.com/gb/23/6/21/n14019941.md#1">前言</a>，<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/6/22/n14020737.md#1">第一章：进化论是未经证实的假说（上）</a>，<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/6/24/n14022170.md#1">第一章：进化论是未经证实的假说（下）</a>，<ahref="http://www.epochtimes.com/gb/23/6/29/n14024749.md#1">第二章：破除进化假说的经典迷思（上）</a>，<ahref="http://www.epochtimes.com/gb/23/7/3/n14027341.md#1">第二章：破除进化假说的经典迷思（中）</a>，<ahref="http://www.epochtimes.com/gb/23/7/5/n14029015.md#1">第二章：破除进化假说的经典迷思（下）</a>，<ahref="http://www.epochtimes.com/gb/23/7/11/n14032398.md#1">第三章：分子生物学否定进化假说（上）</a>，<ahref="http://www.epochtimes.com/gb/23/7/16/n14035548.md#1">第三章：分子生物学否定进化假说（中）</a>，<ahref="http://www.epochtimes.com/gb/23/7/20/n14038267.md#1">第三章：分子生物学否定进化假说（下）</a>，<ahref="http://www.epochtimes.com/gb/23/7/26/n14042113.md#1">第四章：进化假说未触及精神世界（上）</a><ahref="http://www.epochtimes.com/gb/23/8/5/n14048707.md#1">第四章：进化假说未触及精神世界（下）</a>，<ahref="http://www.epochtimes.com/gb/23/8/17/n14056006.md#1">第五章：濒死轮回学揭示生命本质（上）</a><ahref="http://www.epochtimes.com/gb/23/9/7/n14069057.md#1">第五章：濒死轮回学揭示生命本质（下）</a>，<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/9/25/n14081007.md#1">第六章：进化假说使科学误入歧途（上）</a>】</em></p>
+<em>【<ahref="https://github.com/1992513/djy/blob/master/gb/23/6/21/n14019941.md#1">前言</a>，<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/6/22/n14020737.md#1">第一章：进化论是未经证实的假说（上）</a>，<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/6/24/n14022170.md#1">第一章：进化论是未经证实的假说（下）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/6/29/n14024749.md#1">第二章：破除进化假说的经典迷思（上）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/7/3/n14027341.md#1">第二章：破除进化假说的经典迷思（中）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/7/5/n14029015.md#1">第二章：破除进化假说的经典迷思（下）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/7/11/n14032398.md#1">第三章：分子生物学否定进化假说（上）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/7/16/n14035548.md#1">第三章：分子生物学否定进化假说（中）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/7/20/n14038267.md#1">第三章：分子生物学否定进化假说（下）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/7/26/n14042113.md#1">第四章：进化假说未触及精神世界（上）</a><ahref="https://github.com/1992513/djy/blob/master/gb/23/8/5/n14048707.md#1">第四章：进化假说未触及精神世界（下）</a>，<ahref="https://github.com/1992513/djy/blob/master/gb/23/8/17/n14056006.md#1">第五章：濒死轮回学揭示生命本质（上）</a><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/7/n14069057.md#1">第五章：濒死轮回学揭示生命本质（下）</a>，<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/9/25/n14081007.md#1">第六章：进化假说使科学误入歧途（上）</a>】</em></p>
 <p>（版权归大纪元和写作组所有，欢迎转载，不得更改。）</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266694.md#1">法轮功创始人发表《惊醒》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264789.md#1">法轮功创始人发表《法难》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/12/n14247691.md#1">【特稿】共庆世界法轮大法日 同走回升之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241958.md#1">【特稿】人类起源问题的终极答案</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/12/n14506735.md#1">【特稿】非凡传奇时代 法轮大法传世33周年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/23/n14489831.md#1">【特稿】4.25上访让世界见证“真善忍”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387730.md#1">【特稿】纽约时报还要继续替中共打压神韵吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372789.md#1">【特稿】九评发表二十周年 世界迎来巨变</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/18/n10066904.md#1" target="_blank">信力建：谁抽去了中国人的脊梁？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286009.md#1">菩萨赐白莲花？高僧虚云和章嘉国师的神奇经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291385.md#1">【军事热点】乌克兰游戏高手变身战场猎手</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291675.md#1">【全球新闻】美联邦法官驳回川普机密文件案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292242.md#1">【新闻欣视角】世界见证神迹 川普历劫重生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1">五款经久耐用且维护费低的SUV 全是日本车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290767.md#1">【翻墙必看】华为Mate 60 Pro暴跌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1">中共三中全会在内外危机中开锣 专家这样看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292166.md#1">成龙新片《传说》票房翻车 出品方面临亏损</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291441.md#1">孙俪一家四口现身温网决赛 一对儿女近照曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292145.md#1">游法国遭路人溅一身可乐 肖战高EQ反应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292239.md#1">《不可能8》汤姆克鲁斯再展特技 被倒飞飞机悬挂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291390.md#1">汤唯罕晒全家福 纪念与金泰勇结婚10周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290989.md#1">用这一物可以让老鼠逃离花园 你身上就有</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284863.md#1">夏季炎热更需保健 避开七种错误消暑方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290563.md#1">新研究：父亲饮食如何影响未来子女健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284672.md#1">【健康1+1】小肚腩变大了？ 喝两款饮料 消脂瘦腰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291745.md#1">登机证有啥讯息？ 在网上晒照片有多危险？</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/10/24/n14101805.htm">【特稿】进化假说使科学误入歧途（中）</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/24/n14101805.htm">【特稿】进化假说使科学误入歧途（中）</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/24/n14101805.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
